feat: add CAD Overview nav item to all sidebars

--- a/CAD.html
+++ b/CAD.html
@@ -282,25 +282,52 @@
 
                 <!-- Ad Group -->
                 <div class="rounded border border-gray-200 bg-white">
-                  <div class="px-3 py-2 flex flex-wrap gap-x-6 gap-y-1 text-[11px]">
-                    <div class="min-w-[140px]">
-                      <p class="font-semibold text-gray-700">Programmatic Display Placement 1.1</p>
-                      <p class="text-[10px] text-gray-500 mt-0.5">ID: <span class="font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded">sbm9v</span></p>
+                  <div class="px-4 py-4 text-[11px] space-y-4">
+                    
+                    <!-- Name / ID -->
+                    <div>
+                      <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
+                      <p class="mt-0.5 font-semibold text-gray-800">Programmatic Display Placement 1.1
+                        <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">sbm9v</span>
+                      </p>
                     </div>
-                    <div><span class="block text-gray-500">Tactic</span><span class="font-medium text-gray-800">Persona</span></div>
-                    <div><span class="block text-gray-500">Audience</span><span class="font-medium text-gray-800">1 and 2</span></div>
-                    <div><span class="block text-gray-500">Geo</span><span class="font-medium text-gray-800">U.S.</span></div>
-                    <div><span class="block text-gray-500">Dates</span><span class="font-medium text-gray-800">12/20/24 – 12/19/25</span></div>
-                    <div><span class="block text-gray-500">Impr.</span><span class="font-medium text-gray-800">800,000</span></div>
-                    <div class="flex-1 min-w-[200px]">
-                      <span class="block text-gray-500">Landing</span>
-                      <a href="https://micfood.com/our-segments/" target="_blank" class="text-blue-600 hover:underline text-[11px] break-all">micfood.com/our-segments</a>
+
+                    <!-- Core attributes -->
+                    <div class="space-y-3">
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Tactic</p>
+                        <p class="mt-0.5 font-medium text-gray-800">Persona</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Audience</p>
+                        <p class="mt-0.5 font-medium text-gray-800">1 and 2</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Geo</p>
+                        <p class="mt-0.5 font-medium text-gray-800">U.S.</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Dates</p>
+                        <p class="mt-0.5 font-medium text-gray-800">12/20/24 – 12/19/25</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Impressions</p>
+                        <p class="mt-0.5 font-medium text-gray-800">800,000</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Landing</p>
+                        <a href="https://micfood.com/our-segments/" target="_blank" class="mt-0.5 inline-block text-blue-600 hover:underline break-all">
+                          micfood.com/our-segments
+                        </a>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">UTM</p>
+                        <code class="block mt-0.5 bg-gray-100/80 border border-dashed border-gray-300 rounded px-2 py-2 leading-snug break-all text-[10px] text-gray-700">
+                          https://micfood.com/our-segments/?utm_source=programmatic
+                        </code>
+                      </div>
                     </div>
-                  </div>
-                  <div class="px-3 pb-3">
-                    <div class="bg-gray-100/70 rounded px-2 py-2 text-[10px] font-mono text-gray-600 break-all">
-                      https://micfood.com/our-segments/?utm_source=programmatic
-                    </div>
+
                   </div>
                 </div>
 
@@ -330,48 +357,84 @@
 
                 <!-- Ad Group 2.1 -->
                 <div class="rounded border border-gray-200 bg-white">
-                  <div class="px-3 py-2 flex flex-wrap gap-x-6 gap-y-1 text-[11px]">
-                    <div class="min-w-[140px]">
-                      <p class="font-semibold text-gray-700">Placement 2.1 – K-12</p>
-                      <p class="text-[10px] text-gray-500 mt-0.5">ID: <span class="font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded">426771</span></p>
+                  <div class="px-4 py-4 text-[11px] space-y-4">
+                    <div>
+                      <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.1 – K-12
+                        <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">426771</span>
+                      </p>
                     </div>
-                    <div><span class="block text-gray-500">Tactic</span><span class="font-medium text-gray-800">Company Targeting</span></div>
-                    <div><span class="block text-gray-500">Geo</span><span class="font-medium text-gray-800">U.S.</span></div>
-                    <div><span class="block text-gray-500">Dates</span><span class="font-medium text-gray-800">12/20/24 – 12/19/25</span></div>
-                    <div><span class="block text-gray-500">Impr.</span><span class="font-medium text-gray-800">250,000</span></div>
-                    <div class="flex-1 min-w-[200px]">
-                      <span class="block text-gray-500">Landing</span>
-                      <a href="https://micfood.com/our-segments/k-12/" target="_blank" class="text-blue-600 hover:underline text-[11px] break-all">micfood.com/k-12</a>
-                    </div>
-                  </div>
-                  <div class="px-3 pb-3">
-                    <div class="bg-gray-100/70 rounded px-2 py-2 text-[10px] font-mono text-gray-600 break-all">
-                      https://micfood.com/our-segments/k-12/?utm_source=programmatic
+                    <div class="space-y-3">
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Tactic</p>
+                        <p class="mt-0.5 font-medium text-gray-800">Company Targeting</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Geo</p>
+                        <p class="mt-0.5 font-medium text-gray-800">U.S.</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Dates</p>
+                        <p class="mt-0.5 font-medium text-gray-800">12/20/24 – 12/19/25</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Impressions</p>
+                        <p class="mt-0.5 font-medium text-gray-800">250,000</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Landing</p>
+                        <a href="https://micfood.com/our-segments/k-12/" target="_blank" class="mt-0.5 inline-block text-blue-600 hover:underline break-all">
+                          micfood.com/k-12
+                        </a>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">UTM</p>
+                        <code class="block mt-0.5 bg-gray-100/80 border border-dashed border-gray-300 rounded px-2 py-2 leading-snug break-all text-[10px] text-gray-700">
+                          https://micfood.com/our-segments/k-12/?utm_source=programmatic
+                        </code>
+                      </div>
                     </div>
                   </div>
                 </div>
 
                 <!-- Ad Group 2.2 -->
                 <div class="rounded border border-gray-200 bg-white">
-                  <div class="px-3 py-2 flex flex-wrap gap-x-6 gap-y-1 text-[11px]">
-                    <div class="min-w-[140px]">
-                      <p class="font-semibold text-gray-700">Placement 2.2 – Foodservice</p>
-                      <p class="text-[10px] text-gray-500 mt-0.5">ID: <span class="font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded">426773</span></p>
+                  <div class="px-4 py-4 text-[11px] space-y-4">
+                    <div>
+                      <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.2 – Foodservice
+                        <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">426773</span>
+                      </p>
                     </div>
-                    <div><span class="block text-gray-500">Tactic</span><span class="font-medium text-gray-800">Company Targeting</span></div>
-                    <div><span class="block text-gray-500">Geo</span><span class="font-medium text-gray-800">U.S.</span></div>
-                    <div><span class="block text-gray-500">Dates</span><span class="font-medium text-gray-800">12/20/24 – 12/19/25</span></div>
-                    <div><span class="block text-gray-500">Impr.</span><span class="font-medium text-gray-800">250,000</span></div>
-                    <div class="flex-1 min-w-[200px]">
-                      <span class="block text-gray-500">Landing</span>
-                      <a href="https://micfood.com/our-segments/restaurants-catering/" target="_blank" class="text-blue-600 hover:underline text-[11px] break-all">
-                        micfood.com/restaurants-catering
-                      </a>
-                    </div>
-                  </div>
-                  <div class="px-3 pb-3">
-                    <div class="bg-gray-100/70 rounded px-2 py-2 text-[10px] font-mono text-gray-600 break-all">
-                      https://micfood.com/our-segments/restaurants-catering/?utm_source=programmatic
+                    <div class="space-y-3">
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Tactic</p>
+                        <p class="mt-0.5 font-medium text-gray-800">Company Targeting</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Geo</p>
+                        <p class="mt-0.5 font-medium text-gray-800">U.S.</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Dates</p>
+                        <p class="mt-0.5 font-medium text-gray-800">12/20/24 – 12/19/25</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Impressions</p>
+                        <p class="mt-0.5 font-medium text-gray-800">250,000</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Landing</p>
+                        <a href="https://micfood.com/our-segments/restaurants-catering/" target="_blank" class="mt-0.5 inline-block text-blue-600 hover:underline break-all">
+                          micfood.com/restaurants-catering
+                        </a>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">UTM</p>
+                        <code class="block mt-0.5 bg-gray-100/80 border border-dashed border-gray-300 rounded px-2 py-2 leading-snug break-all text-[10px] text-gray-700">
+                          https://micfood.com/our-segments/restaurants-catering/?utm_source=programmatic
+                        </code>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -402,24 +465,46 @@
 
                 <!-- Ad Group 3.1 -->
                 <div class="rounded border border-gray-200 bg-white">
-                  <div class="px-3 py-2 flex flex-wrap gap-x-6 gap-y-1 text-[11px]">
-                    <div class="min-w-[140px]">
-                      <p class="font-semibold text-gray-700">Placement 3.1 – CRM Onboarding</p>
-                      <p class="text-[10px] text-gray-500 mt-0.5">ID: <span class="font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded">177131</span></p>
+                  <div class="px-4 py-4 text-[11px] space-y-4">
+                    <div>
+                      <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 3.1 – CRM Onboarding
+                        <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">177131</span>
+                      </p>
                     </div>
-                    <div><span class="block text-gray-500">Tactic</span><span class="font-medium text-gray-800">Data Onboarding</span></div>
-                    <div><span class="block text-gray-500">Audience</span><span class="font-medium text-gray-800">e-mails</span></div>
-                    <div><span class="block text-gray-500">Geo</span><span class="font-medium text-gray-800">U.S.</span></div>
-                    <div><span class="block text-gray-500">Dates</span><span class="font-medium text-gray-800">12/20/24 – 12/19/25</span></div>
-                    <div><span class="block text-gray-500">Impr.</span><span class="font-medium text-gray-800">200,000</span></div>
-                    <div class="flex-1 min-w-[200px]">
-                      <span class="block text-gray-500">Landing</span>
-                      <a href="https://micfood.com/our-segments/" target="_blank" class="text-blue-600 hover:underline text-[11px] break-all">micfood.com/our-segments</a>
-                    </div>
-                  </div>
-                  <div class="px-3 pb-3">
-                    <div class="bg-gray-100/70 rounded px-2 py-2 text-[10px] font-mono text-gray-600 break-all">
-                      https://micfood.com/our-segments/?utm_source=programmatic
+                    <div class="space-y-3">
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Tactic</p>
+                        <p class="mt-0.5 font-medium text-gray-800">Data Onboarding</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Audience</p>
+                        <p class="mt-0.5 font-medium text-gray-800">e-mails</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Geo</p>
+                        <p class="mt-0.5 font-medium text-gray-800">U.S.</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Dates</p>
+                        <p class="mt-0.5 font-medium text-gray-800">12/20/24 – 12/19/25</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Impressions</p>
+                        <p class="mt-0.5 font-medium text-gray-800">200,000</p>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">Landing</p>
+                        <a href="https://micfood.com/our-segments/" target="_blank" class="mt-0.5 inline-block text-blue-600 hover:underline break-all">
+                          micfood.com/our-segments
+                        </a>
+                      </div>
+                      <div>
+                        <p class="text-[10px] font-semibold text-gray-500 uppercase">UTM</p>
+                        <code class="block mt-0.5 bg-gray-100/80 border border-dashed border-gray-300 rounded px-2 py-2 leading-snug break-all text-[10px] text-gray-700">
+                          https://micfood.com/our-segments/?utm_source=programmatic
+                        </code>
+                      </div>
                     </div>
                   </div>
                 </div>
