--- a/CAD.html
+++ b/CAD.html
@@ -206,12 +206,19 @@
 </nav>
 
 <main class="flex-1 overflow-y-auto p-6">
-  <div class="bg-white rounded-lg shadow-sm">
-    <div class="p-4 border-b border-gray-200">
-      <h1 class="text-2xl font-semibold text-gray-900">CAD – MIC Food</h1>
-    </div>
+        <div class="bg-white rounded-lg shadow-sm">
+          <div class="p-4 border-b border-gray-200">
+            <div class="flex items-start gap-4 mb-3">
+              <div class="flex-1">
+                <h1 data-bind="adv.name" class="md:text-2xl font-semibold text-gray-900">Loading…</h1>
+                <div class="flex justify-between items-center">
+                  <h3 class="text-sm font-semibold text-gray-600">Account #: <span data-bind="adv.account" class="text-sm text-gray-500">—</span></h3>
+                  <h3 class="text-sm font-semibold text-gray-600">ID: <span data-bind="adv.id" class="text-sm text-gray-500">—</span></h3>
+                </div>
+              </div>
+            </div>
 
-    <div class="p-4 space-y-8">
+            <hr class="border-gray-300 mp-4 p-2">
 
       <!-- Account Info -->
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -242,7 +249,7 @@
       </div>
 
       <!-- DSP Campaigns -->
-      <section id="dspCampaigns" class="bg-white rounded-lg border border-gray-200 shadow-sm">
+      <section id="dspCampaigns" class="mt-8 bg-white rounded-lg border border-gray-200 shadow-sm">
         <div class="px-4 py-3 border-b border-gray-200 flex items-center justify-between">
           <h2 class="text-sm font-semibold text-gray-800">DSP Campaigns</h2>
           <span class="text-xs text-gray-500">4 Active</span>
