--- a/CAD.html
+++ b/CAD.html
@@ -218,11 +218,9 @@
               </div>
             </div>
 
-            <hr class="border-gray-300 mp-4 p-2">
-
-      <!-- Account Info -->
-<!-- Budget Breakdown -->
-<section class="space-y-4 mt-6">
+            <hr class="border-gray-300 my-2">
+            <!-- Budget Breakdown -->
+<section class="space-y-4 mt-2">
   <h2 class="text-xl font-semibold text-gray-800">Budget Breakdown</h2>
 
   <div class="bg-white shadow rounded-lg border border-gray-200">
@@ -335,7 +333,7 @@
                     <!-- Name / ID -->
                     <div>
                       <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
-                      <p class="mt-0.5 font-semibold text-gray-800">Programmatic Display Placement 1.1
+                      <p class="mt-0.5 font-semibold text-gray-800">Programmatic Display Placement 1.1: Foodservice/K-12_Persona
                         <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">sbm9v</span>
                       </p>
                     </div>
@@ -408,7 +406,7 @@
                   <div class="px-4 py-4 text-[11px] space-y-4">
                     <div>
                       <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
-                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.1 – K-12
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.1: K-12_Company Targeting
                         <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">426771</span>
                       </p>
                     </div>
@@ -450,7 +448,7 @@
                   <div class="px-4 py-4 text-[11px] space-y-4">
                     <div>
                       <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
-                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.2 – Foodservice
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 2.2: Foodservice_Company Targeting
                         <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">426773</span>
                       </p>
                     </div>
@@ -516,7 +514,7 @@
                   <div class="px-4 py-4 text-[11px] space-y-4">
                     <div>
                       <p class="text-[10px] font-semibold text-gray-500 uppercase tracking-wide">Ad Group</p>
-                      <p class="mt-0.5 font-semibold text-gray-800">Placement 3.1 – CRM Onboarding
+                      <p class="mt-0.5 font-semibold text-gray-800">Placement 3.1: Foodservice/K-12_CRM Onboarding
                         <span class="ml-2 font-mono bg-amber-100 text-amber-800 px-1 py-0.5 rounded align-middle">177131</span>
                       </p>
                     </div>
@@ -1158,7 +1156,6 @@ document.addEventListener('DOMContentLoaded', () => {
     btn.addEventListener('click', () => {
       const isOpen = !panel.classList.contains('hidden');
 
-      // Single-open accordion behavior (remove this block to allow multiple open)
       if (!isOpen) {
         document.querySelectorAll('#campaignList .adgroups-panel').forEach(p => {
           if (p !== panel) {
@@ -1178,14 +1175,6 @@ document.addEventListener('DOMContentLoaded', () => {
       }
     });
   });
-
-  // OPTIONAL: open first campaign by default
-  const first = document.querySelector('#campaignList [data-campaign] .adgroups-panel');
-  const firstCaret = first?.parentElement?.querySelector('[data-caret]');
-  if (first && firstCaret) {
-    first.classList.remove('hidden');
-    firstCaret.textContent = '–';
-  }
 });
 </script>
 </body>
